<resources>
    <string name="app_name">FedMoneyClient</string>
    <string name="hello_user">Hello User, Kindly select from the options below!</string>
    <string name="enter_day">Enter Day</string>
    <string name="enter_month">Enter Month</string>
    <string name="enter_working_day_between_5_and_25">Enter Working Day between 5 and 25</string>
    <string name="enter_the_year">Enter the year below</string>
    <string name="show_data">Show Data</string>
    <string name="unbind_service">Unbind Service</string>
    <string-array name="options">
        <item>Select an option</item>
        <item>Retrieve monthly cash average</item>
        <item>Retrieve daily cash</item>
    </string-array>

    <string-array name="years">
        <item>Select Year</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>

</resources>
