<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20dp"
        android:text="@string/hello_user"/>

    <Spinner
        android:id="@+id/option_spinner"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_margin="10dp"
        android:theme="@android:style/Theme.Holo.Light"
        android:padding="10dp" />

    <EditText
        android:id="@+id/aday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_day"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@android:style/Theme.Holo.Light"
        android:visibility="gone" />

    <EditText
        android:id="@+id/amonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_month"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@android:style/Theme.Holo.Light"
        android:visibility="gone" />

    <EditText
        android:id="@+id/anumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_working_day_between_5_and_25"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@android:style/Theme.Holo.Light"
        android:visibility="gone" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20dp"
        android:text="@string/enter_the_year"
        android:visibility="gone"/>


    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_margin="10dp"
        android:theme="@android:style/Theme.Holo.Light"
        android:padding="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/get_data"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_data"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/unbind"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unbind_service" />


    </LinearLayout>

</LinearLayout>